5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1573_579.log
== TEST (2019-03-25 15:06:59) 
-- CODE:
print("A ufam tem", 2016 - 1909, "anos de fundacao.")
-- OUTPUT:
A ufam tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:07:02) 
-- CODE:
print("A ufam tem", 2016 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.161316
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A ufam tem 107 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:08:04) 
-- CODE:
print("A UFAM tem 107 anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:09:29) 
-- CODE:
print(2016 - 1909)
print(A UFAM tem 107 anos de fundacao.)
-- ERROR:
File "XXXX", line 2
    print(A UFAM tem 107 anos de fundacao.)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:09:56) 
-- CODE:
print(2016 - 1909)
print(A UFAM tem 107 anos de fundacao)
-- ERROR:
File "XXXX", line 2
    print(A UFAM tem 107 anos de fundacao)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:11:20) 
-- CODE:
print("A UFAM tem 107 anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:11:23) 
-- CODE:
print("A UFAM tem 107 anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:11:23) 
-- CODE:
print("A UFAM tem 107 anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:11:24) 
-- CODE:
print("A UFAM tem 107 anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:11:25) 
-- CODE:
print("A UFAM tem 107 anos de fundacao.")
-- EXECUTION TIME:
0.14462
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
